--- a/openshift/s2i/golang-container/1.10/Dockerfile.rhel7
+++ b/openshift/s2i/golang-container/1.10/Dockerfile.rhel7
@@ -14,6 +14,8 @@ LABEL summary="$SUMMARY" \
 
 # Set the default CMD to print the usage of the language image.
 
+USER root
+
 RUN mkdir -p /licenses
 
 COPY ./LICENSE /licenses/
